--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,10 @@
+# PRが作成されると、テストを実行し、カバレッジをPRにコメントする
+name: test
 on:
   push:
     branches:
       - "main"
   pull_request:
-name: test
 jobs:
   test:
     runs-on: ubuntu-latest
