--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       TODO_DB_USER: todo
       TODO_DB_PASS: todo
       TODO_DB_NAME: todo
+      TODO_REDIS_HOST: todo-redis
+      TODO_REDIS_PORT: 6379
     volumes:
       - .:/app # カレントディレクトリをコンテナの/appにマウント
     ports:
@@ -38,7 +40,15 @@ services:
       - $PWD/_tools/mysql/conf.d:/etc/mysql/conf.d:cached
     ports:
       - "33307:3307"
+  todo-redis:
+    image: "redis:latest"
+    container_name: todo-redis
+    ports:
+      - "36379:6379"
+    volumes:
+      - todo-redis-data:/data
 # todo-db-data という名前付きボリュームを定義
 # 名前付きボリュームは複数のコンテナ間で共有できる
 volumes:
   todo-db-data:
+  todo-redis-data:
